<resources>
    <string name="app_name">Forensics Quiz</string>
    <string name="forensics_quiz">Forensics Quiz</string>
    <string name="q1">1. Which liquids do not bubble when introduced to iodine?</string>
    <string name="q1ammonia">Ammonia</string>
    <string name="q1vinegar">Vinegar</string>
    <string name="q1rubbing_alcohol">Rubbing Alcohol</string>
    <string name="q1ho">Hydrogen Peroxide</string>
    <string name="q2">2. Which of these liquids can be easily identified by smell?</string>
    <string name="q2ho">Hydrogen Peroxide</string>
    <string name="q2alcohol">Rubbing Alcohol</string>
    <string name="q2vinegar">Vinegar</string>
    <string name="q2ammonia">Ammonia</string>
    <string name="q3">3. Which of these liquids has a cloudy appearance?</string>
    <string name="q3ammonia">Ammonia</string>
    <string name="lemon">Lemon Juice</string>
    <string name="q3ho">Hydrogen Peroxide</string>
    <string name="vinegar">Vinegar</string>
    <string name="q4">4. What type of fingerprint is this?</string>
    <string name="q5">5. What type of fingerprint is this?</string>
    <string name="q6">6. What type of fingerprint is this?</string>
    <string name="q7">7. Is gelatin a tan powder that smells like bread?</string>
    <string name="q7yes">yes</string>
    <string name="q8">8. Is Vitamin C powder acidic?</string>
    <string name="q8yes">yes</string>
    <string name="q8no">no</string>
    <string name="q7no">no</string>
    <string name="submit">Submit</string>
    <string name="you_answered">You answered&#160;</string>
    <string name="correct">&#160;correct out of 8.</string>
    <string name="reset">Reset</string>
    <string name="Crimebuster">Congratulations, Scientist! You scored&#160;</string>
    <string name="try_again">&#160;correctly out of 8. Try again!</string>
    <string name="almost">Almost! You answered&#160;</string>
    <string name="go_back">Go back and review your study materials. You answered&#160;</string>
    <string name="out_of_8">&#160;correctly out of 8.</string>
    <string name="logo">App logo</string>
    <string name="whorl_fingerprint">Whorl fingerprint</string>
    <string name="arch_fingerprint">Arch fingerprint</string>
    <string name="loop_fingerprint">Loop fingerprint</string>
    <string name="type">fingerprint type?</string>
</resources>
